--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "scripts.js",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "build": "babel src -d lib"
   },
   "repository": {
     "type": "git",
@@ -19,10 +19,14 @@
   },
   "homepage": "https://github.com/OybekKayumov/portfolio#readme",
   "dependencies": {
+    "core-js": "^3.21.1",
     "leaflet": "^1.7.1",
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
     "parcel": "^2.3.2"
   }
 }
